--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,17 @@ ACTIVE_POOL=blue
 RELEASE_ID_BLUE=v1.0.0-blue
 RELEASE_ID_GREEN=v1.0.0-green
 
+# Slack
+SLACK_WEBHOOK_URL= # put your Slack Incoming Webhook URL here
+
+# Alerting thresholds
+ERROR_RATE_THRESHOLD=2           # percent
+WINDOW_SIZE=200                  # number of requests to evaluate
+ALERT_COOLDOWN_SEC=5         # seconds between duplicate alert types
+
 # Optional: Port configuration (default values shown)
 # PORT=3000
+
+# Optional
+MAINTENANCE_MODE=false           # true to suppress failover alerts during planned work
+LOG_PATH=/var/log/nginx/access.json.log
